# my-pdf-search

./: .gitignore  README.md  mypdfsearch.py  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  mypdfsearch.py  tauri.conf.json
src-tauri/src/: main.rs
src/cases/: save-file.service.ts
src/components/app/: main-panel.tsx  nav-bar.tsx
src/components/ui/: loading.tsx
src/components/ui-theme/: theme-toggle.tsx
