[package]
name = "my_pdf_search"
version = "0.1.0"
description = "A Tauri App"
authors = ["Alan Ramalho"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] } # Adicionando a dependência Tokio para operações assíncronas
windows-core = "0.54.0"
windows-result = "0.1.0"
windows = "0.54.0"
tauri-types = "0.0.2"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
